compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__unused_private_type_warnings_test6.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 227
expression: "type X { X }"
snapshot_kind: text
---
----- SOURCE CODE
type X { X }

----- WARNING
warning: Unused private type
  ┌─ /src/warning/wrn.gleam:1:1
  │
1 │ type X { X }
  │ ^^^^^^ This private type is never used

Hint: You can safely remove it.

warning: Unused private constructor
  ┌─ /src/warning/wrn.gleam:1:10
  │
1 │ type X { X }
  │          ^ This private constructor is never used

Hint: You can safely remove it.
