compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__unused_pure_function.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 3208
expression: "\nfn add(a, b) { a + b }\n\npub fn main() {\n  add(1, 2)\n  Nil\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn add(a, b) { a + b }

pub fn main() {
  add(1, 2)
  Nil
}


----- WARNING
warning: Unused value
  ┌─ /src/warning/wrn.gleam:5:3
  │
5 │   add(1, 2)
  │   ^^^^^^^^^ This value is never used

This expression computes a value without any side effects, but then the
value isn't used at all. You might want to assign it to a variable, or
delete the expression entirely if it's not needed.
