compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__unused_record_constructor_raises_a_warning.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 1320
expression: "\npub type Thing {\n  Thing(value: Int)\n}\n\npub fn main() {\n  Thing(1)\n  1\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Thing {
  Thing(value: Int)
}

pub fn main() {
  Thing(1)
  1
}


----- WARNING
warning: Unused literal
  ┌─ /src/warning/wrn.gleam:7:3
  │
7 │   Thing(1)
  │   ^^^^^^^^ This value is never used

Hint: You can safely remove it.
