compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__unused_record_update_raises_a_warning.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 1336
expression: "\npub type Thing {\n  Thing(value: Int, other: Int)\n}\n\npub fn main() {\n  let thing = Thing(1, 2)\n  Thing(..thing, value: 1)\n  1\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Thing {
  Thing(value: Int, other: Int)
}

pub fn main() {
  let thing = Thing(1, 2)
  Thing(..thing, value: 1)
  1
}


----- WARNING
warning: Unused value
  ┌─ /src/warning/wrn.gleam:8:3
  │
8 │   Thing(..thing, value: 1)
  │   ^^^^^^^^^^^^^^^^^^^^^^^^ This value is never used

This expression computes a value without any side effects, but then the
value isn't used at all. You might want to assign it to a variable, or
delete the expression entirely if it's not needed.
